--- a/style.css
+++ b/style.css
@@ -4,19 +4,33 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
+:root {
+  /* fonts */
+  --title-font-size: 1.875rem;
+  --subtitle-font-size: 1rem;
+
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'DM Sans', sans-serif;
+
+}
+
 body {
   background-color: #333;
 }
 
 form {
-  width: 300px;
+  width: 18.75rem;
   background-color: white;
-  padding: 16px;
+  padding: 1rem;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
 form label,
@@ -24,14 +38,28 @@ form input,
 form select {
   width: 100%;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
   
 }
 
 form input, form select {
-  height: 40px;
-  padding-left: 10px;
+  height: 2.5rem;
+  padding-left: 0.625rem;
   border: 1px solid #333;
 }
 
+.button {
+  background-color: blueviolet;
+  color: white;
+  height: 2.5rem;
+  display: inline-flex;
+  align-items: center;
+  padding: 0 2rem;
+  border-radius: 0.25rem;
+  font: 500 1rem var(--body-font);
+  transition: background 0.3s;
+}
 
+.button:hover {
+  background: coral;
+}
