--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ a {
   text-decoration: none;
 }
 
+h2{
+  text-align: center;
+}
+
 form {
   width: 18.75rem;
   background-color: white;
@@ -34,20 +38,23 @@ form {
 }
 
 form label{
+  width: 100%;
   display: block;
   margin: 0.625rem;
   
-}
-
-form input,
-form select {
-
 }
 
 form input, form select {
   height: 2.5rem;
   padding-left: 0.625rem;
   border: 1px solid #333;
+}
+
+form input[type="radio"],
+form input[type="checkbox"]{
+  width: auto;
+  height: auto;
+  display: inline;
 }
 
 .button {
@@ -61,6 +68,7 @@ form input, form select {
   border-radius: 0.25rem;
   font: 500 1rem var(--body-font);
   transition: background 0.5s;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -69,6 +77,12 @@ form input, form select {
 
 .skip {
   margin-right: 0;
+  float: right;
+}
+
+.half-label {
+  display: inline-block;
+  width: 40%;
 }
 
 span {
